# JOURNAL

./: AI_Benchmark_Datasets_Register.csv  AI_Datasets_Manifest.json  AI_Protocols_Register.csv  AI_Training_Datasets_Register.csv  BUILD_INFRASTRUCTURE.md  COMMANDS.md  FEATURES.md  FINAL_VERIFICATION.txt  IMPLEMENTATION_SUMMARY.md  Platform_Playbooks_Manifest.json  README.md  RESEARCH_PAPER.md  SDK_Model_Manifest.json  SOVEREIGN_WORKERS_IMPLEMENTATION.md  THIRD_PARTY_API_IMPLEMENTATION.md  USES.md  run-all-tests.sh
.github/: BUILD_SUMMARY.md
datasets/: README.md  package.json
docs/: COMPREHENSIVE_TEST_RESULTS_REPORT.md  PHI_ENCODED_COGNITIVE_ARCHITECTURE.md  RESEARCH_PAPER_10_TEMPORAL_REASONING_PROTOCOL.md  RESEARCH_PAPER_11_SWARM_INTELLIGENCE_PROTOCOL.md  RESEARCH_PAPER_12_MEMORY_RUNTIME_HYPOTHESIS.md  RESEARCH_PAPER_13_DRONE_SWARM_COORDINATION.md  RESEARCH_PAPER_14_ADVERSARIAL_RESILIENCE_FRAMEWORK.md  RESEARCH_PAPER_15_EMERGENT_CONSCIOUSNESS_METRICS.md  RESEARCH_PAPER_16_DISTRIBUTED_CONSENSUS_ORGANISMS.md  RESEARCH_PAPER_17_NEURO_SYMBOLIC_FUSION.md  RESEARCH_PAPER_18_MORPHOGENETIC_CODE_SYSTEMS.md  RESEARCH_PAPER_19_TEMPORAL_SOVEREIGNTY.md  RESEARCH_PAPER_1_SOVEREIGN_ARCHITECTURE.md  RESEARCH_PAPER_20_COGNITIVE_LOAD_BALANCING.md  RESEARCH_PAPER_21_SOVEREIGN_MEMORY_ARCHITECTURE.md  RESEARCH_PAPER_22_EVOLUTIONARY_CODE_SYNTHESIS.md  civos-prime.html  (+29 more)
haskell/: medina-intelligence.cabal
haskell/src/: AISBridge.hs  GreekMath.hs  PhiResonance.hs
rust/: Cargo.toml
rust/src/: ais_bridge.rs  attestation.rs  circuit.rs  greek_math.rs  lib.rs  phantom.rs  phi.rs  token.rs
src/python/: IMPLEMENTATION_COMPLETE.md  INTEGRATION_GUIDE.md  README.md  __init__.py  examples_sovereign_workers.py  examples_worker_api.py  organism_cli.py  pyproject.toml
src/python/ai-aware-tools/: __init__.py
src/python/ai-tools/: __init__.py
src/python/cross-domain-uses/: __init__.py
src/python/deployed-app/: __init__.py
src/python/deployment/: docker-compose.yml
src/python/governance-executor/: __init__.py
src/python/intelligence-router/: __init__.py  cli.py
src/python/memory-authority/: __init__.py
src/python/paper-engine/: __init__.py
src/python/sovereign/: __init__.py
src/python/sovereign-workers/: orchestrator.py
src/python/sovereign_organism.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/python/sovereign_workers/: README.md  __init__.py  specialized.py
src/python/tests/: __init__.py  conftest.py  test_ai_tools.py  test_deployed_app.py  test_governance_executor.py  test_intelligence_router.py  test_memory_authority.py  test_paper_engine.py  test_sovereign_workers.py
src/python/third-party-ai-api/: INTEGRATION_EXAMPLES.md  QUICK_START.md  README.md  __init__.py
(+885 files in other folders)
