[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sovereign-organism"
version = "0.1.0"
description = "Python integration framework for Sovereign Organism intelligence platform"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [
    {name = "Freddy Medina", email = "freddy@sovereignorganism.ai"}
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "cryptography>=41.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

zenodo = [
    "zenodo-client>=0.1.0",
]

jupyter = [
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "ipython>=8.0.0",
]

[project.urls]
Repository = "https://github.com/FreddyCreates/JOURNAL"
Documentation = "https://freddycreates.github.io/JOURNAL/"
